--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,87 @@
    v2.0 | 20110126
    License: none (public domain)
    ========================================================================== */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
-blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
-ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
-dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
-figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -24,17 +98,30 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
 /* Force scrollbar */
-html { overflow-y: scroll; }
+html {
+  overflow-y: scroll;
+}
 
 /* Align radios and text inputs with their label */
 
-input[type='radio'] { vertical-align: text-bottom; }
+input[type='radio'] {
+  vertical-align: text-bottom;
+}
 
 /* Hand cursor on clickable input elements */
 label,
@@ -50,7 +137,9 @@ strong {
   font-size: inherit;
 }
 
-em { font-style: italic; }
+em {
+  font-style: italic;
+}
 
 img {
   width: 100%;
@@ -66,8 +155,13 @@ sup {
   line-height: 0;
 }
 
-sup { top: -.7em; }
-sub { bottom: -.25em; }
+sup {
+  top: -.7em;
+}
+
+sub {
+  bottom: -.25em;
+}
 
 /* 1.2. Clear Fix
    ========================== */
@@ -78,8 +172,13 @@ sub { bottom: -.25em; }
   content: " ";
 }
 
-.cf:after { clear: both; }
-.cf { *zoom: 1; }
+.cf:after {
+  clear: both;
+}
+
+.cf {
+  *zoom: 1;
+}
 
 /*for all*/
 body {
@@ -87,9 +186,9 @@ body {
   font-family: sans-serif;
 }
 
-a { 
+a {
   display: inline-block;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 li {
@@ -100,55 +199,190 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 86%;
   margin: 0 auto;
 }
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-transform: capitalize;
+}
+
 /*=================================
   Header styling starts here
 =================================*/
+/* home page header styling stert here */
+header{
+  background: #4e4e4e;
+  color: #fff;
+}
 
+header .wrapper {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
 
+.home-heading a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
 
+.nav-link {
+  padding: 8px;
+  color: #fff;
+  font-size: 18px;
+}
 
+.nav-link.active,
+.nav-link:hover{ color: #000; }
 
+.btn {
+  padding: 8px 2%;
+  border: 2px solid transparent;
+  background: #4e4e4e;
+  color: #fff;
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
 
+.btn:hover { color: #000; }
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+ }
+ 
+ .bar {
+   width: 25px;
+   height: 3px;
+   margin: 5px;
+   display: block;
+   background-color: #fff;
+   text-indent: -9999px;
+   transition: all 0.3s;
+ }
+
+.sub-heading {
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+/* home page header styling end here */
 /*=================================
   Header styling ends here
-=================================*/  
+=================================*/
 
 /*=================================
   main styling starts here
 =================================*/
+.login-page , .home-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url(../Website-Design-Background-1.jpg)center no-repeat;
+  background-size: cover;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.heading {
+  margin-bottom: 30px;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 600;
+}
+
+.my-form { 
+  min-width: 340px;
+  width: 25%;
+ }
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-group input {
+  padding: 12px 5%;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  font-size: 18px;
+  outline: none;
+}
+
+.input-group.fail input { border-color: #fc1505; }
+.input-group.success input { border-color: #2efc05; }
+
+.error { 
+  font-weight: 600;
+  visibility: hidden;
+}
+
+.input-group.fail .error {
+  color: #fc1505;
+  visibility: visible;
+}
+
+.controller {
+  padding: 7px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
+.login {
+  padding: 7px 5%;
+  border: 2px solid #686D6B;
+  border-radius: 3px;
+  background: #686D6B;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: all .3s ease-in-out;
+}
 
-
-
-
-
-
+.login:hover {
+  border: 2px solid transparent;
+  color: #000;
+}
 /*=================================
   main styling ends here
 =================================*/
 
 /*=================================
   footer styling starts here
-=================================*/ 
+=================================*/
+footer {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #4e4e4e;
+}
 
-
-
-
-
-
-
- /*=================================
+.copy {
+  color: #eee;
+  font-size: 18px;
+}
+/*=================================
   footer styling ends here
-=================================*/ 
+=================================*/
 
 /*media query starts*/
 /*media query for 995px starts here*/
-@media only screen and (max-width: 995px) {
-
-
-
-}  
+@media only screen and (max-width: 995px) {}
