--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,7 @@ sub {
 body {
   box-sizing: border-box;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 a {
@@ -215,6 +216,7 @@ li {
 =================================*/
 /* home page header styling stert here */
 header{
+  position: relative;
   background: #4e4e4e;
   color: #fff;
 }
@@ -384,5 +386,61 @@ footer {
 =================================*/
 
 /*media query starts*/
+
 /*media query for 995px starts here*/
-@media only screen and (max-width: 995px) {}
+@media only screen and (max-width: 995px) {
+  .hamburger {
+    display: block;
+    z-index: 2;
+    position: absolute;
+    top: 26px;
+    right: 20px;
+}
+
+.navbar {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 100%;
+  background: #4e4e4e;
+  transition: all .3s ease-in-out;
+}
+
+ .navbar.active { right: 0; }
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 25px;
+}
+
+.hamburger.active .bar2 { display: none; }
+.hamburger.active .bar1 { transform:translateY(0)rotate(45deg) }
+.hamburger.active .bar3 { transform:translateY(-8px)rotate(-45deg) }
+.btn { margin: 0 2%; }
+.home-heading a { font-size: 18px; }
+}
+/*media query for 995px end here*/
+
+/*media query for 768px starts here*/
+
+@media only screen and (max-width: 768px){
+  .btn { margin:  0 12%; }
+}
+/*media query for 768px end here*/
+
+/*media query for 480px starts here*/
+@media only screen and (max-width: 480px) {
+  .my-form { min-width: 270px;}
+  .copy { font-size: 15px;}
+  .home-heading a { font-size: 11px; }
+  .sub-heading { font-size: 22px; }
+}
+/*media query for 480px end here*/
